2005-08-08  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: Updated for 2.8.0.2 release.
	* gui/gdmsetup.glade:  Fixed strings, refer to bugs
	  #312956, 312959, and 312960.
	* daemon/gdm.c: Fixed Multicast compile issue when
	  IPv6 is not set.
	* config/Makefile.am: Fixed "make distcheck" issue.

2005-08-04  Brian Cameron  <brian.cameron@sun.com>

	* daemon/server.c: Fix malformed string.
	* daemon/gdm.c, daemon/gdm.h: Fixed GET_CONFIG command so
	  it works.  Before it only printed out the value if
	  it had a value defined in the gdm.conf file.  Now
	  it prints out the runtime value.  For values that
	  are only used by other programs, it prints out the
	  compiled-in default if no value exists in gdm.conf.
	  Added comments to gdm.h to make it clear what work
	  developers should do when adding new configuration
	  options.
	* gui/gdm.h, config/gdm.conf.in: Fixed default value
	  for GtkRC so it's %datadir%/themes/Default/gtk-2.0/gtkrc
	  instead of Default/gtk/gtkrc.

2005-08-03  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Made XML conformant.
	* gui/gdmlogin.c, gui/greeter/greeter.c:  Now
	  GDM is more backwards compatible.  The change
	  to add DefaultWelcome and DefaultRemoteWelcome
	  to the config file would cause old configuration
	  files to ignore the setting.  Now if the gdm.conf
	  file is missing the DefaultWelcome or 
	  DefaultRemoteWelcome key it goes ahead and uses
	  the message in gdm.conf (unless the message is
	  the same as the default anyway).

2005-08-03  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Correct AT_BINDIR.
	* daemon/gdm.h: Changed "xdmcp" to "XDMCP" in comments.

2005-08-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.[ch], gui/gdmsetup.c : Change GDM_KEY_SERVERS
	  to GDM_KEY_SECTION_SERVER and added GDM_KEY_SECTION_GREETER.
	  There already is a GDM_KEY_GREETER, so for section 
	  #defines it's better to include "SECTION" in it.