@@ -801,6 +801,11 @@ EXPANDED_LOGDIR=`eval echo $LOGDIR_TMP`
 AC_SUBST(EXPANDED_LOGDIR)
 AC_DEFINE_UNQUOTED(EXPANDED_LOGDIR,"$EXPANDED_LOGDIR")
 
+SYSCONFDIR_TMP="$sysconfdir"
+EXPANDED_SYSCONFDIR=`eval echo $SYSCONFDIR_TMP`
+AC_SUBST(EXPANDED_SYSCONFDIR)
+AC_DEFINE_UNQUOTED(EXPANDED_SYSCONFDIR,"$EXPANDED_SYSCONFDIR")
+
 if test x$DMX_SUPPORT = xyes ; then
 	GDM_RECONNECT_PROXY=$EXPANDED_BINDIR/gdm-dmx-reconnect-proxy
 else
@@ -828,7 +833,7 @@ AC_ARG_WITH(configdir,
 if test x$withval != x; then
 	GDM_CONFIGDIR="$withval"
 else
-	GDM_CONFIGDIR=$EXPANDED_SYSCONFDIR
+	GDM_CONFIGDIR="$EXPANDED_SYSCONFDIR/gdm"
 fi
 
 AC_SUBST(GDM_CONFIGDIR)
@@ -1002,11 +1007,6 @@ AC_SUBST(X_CONFIG_OPTIONS)
 AC_DEFINE_UNQUOTED(X_SERVER,"$X_SERVER")
 AC_DEFINE_UNQUOTED(X_SERVER_PATH,"$X_SERVER_PATH")
 AC_DEFINE_UNQUOTED(X_CONFIG_OPTIONS,"$X_CONFIG_OPTIONS", Options used when launching xserver)
-
-SYSCONFDIR_TMP="$sysconfdir"
-EXPANDED_SYSCONFDIR=`eval echo $SYSCONFDIR_TMP`
-AC_SUBST(EXPANDED_SYSCONFDIR)
-AC_DEFINE_UNQUOTED(EXPANDED_SYSCONFDIR,"$EXPANDED_SYSCONFDIR")
 
 SESSDIR_TMP="$sysconfdir/gdm/Sessions"
 EXPANDED_SESSDIR=`eval echo $SESSDIR_TMP`
