@@ -5,7 +5,8 @@
 	  #312956, 312959, and 312960.
 	* daemon/gdm.c: Fixed Multicast compile issue when
 	  IPv6 is not set.
-	* config/Makefile.am: Fixed "make distcheck" issue.
+	* configure.in, config/Makefile.am: Fixed
+	  "make distcheck" issue.
 
 2005-08-04  Brian Cameron  <brian.cameron@sun.com>
 
